--- a/index.html
+++ b/index.html
@@ -4,21 +4,20 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+    <link rel="stylesheet" href="css/style.css">
 
   </head>
   <body>
     <h1>Hello, world!</h1>
-	<div id="start"></div>
-	<div id="goal-number"></div>
-	<div id="wins"></div>
-	<div id="loses"></div>
-	<div id="crystal-yellow"></div>
-	<div id="crystal-blue"></div>
-	<div id="crystal-red"></div>
-	<div id="crystal-green"></div>
-   
+  	<div><button type="button" name="button" id="start">START!</button></div>
+  	<div id="goal-number"></div>
+  	<div id="guessed-number"></div>
+  	<div id="wins"></div>
+  	<div id="loses"></div>
+  	<div id="crystals"></div>
 
-	<script src="javascript/game.js"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.js"></script>
+  	<script src="javascript/game.js"></script>
   </body>
 </html>
